<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coyn</string>
    <string name="amount_text">Amount</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_income">Add Income</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="submit_button_text">Submit</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="reset_button_text">Reset</string>
    <string name="category_text">Category</string>
    <string name="vendor_text">Vendor</string>
    <string name="date_text">Date</string>
    <string name="show_table">Show DB</string>
    <string name="label_password">Please enter your password:</string>
    <string name="label_new_password">Please enter a password to help us better protect your data:</string>
    <string name="welcome_text">Welcome new user to Coyn!</string>
    <string name="label_retype_password">Please retype your password:</string>
    <string name="title_activity_expense_display">Total Monthly Expenses</string>
    <string name="enter_password">Password</string>
    <string name="title_activity_expense_test">ExpenseTestActivity</string>
    <string name="title_activity_all_budgets">AllBudgetsActivity</string>
    <string name="status">DefCom Level</string>
    <string name="hello_world">Hello world!</string>
    <string name="position">Information for Tab X</string>
    <string name="top_five">Top Five Expenditures</string>
    <string name="currentMax">Current Expenses versus Budget</string>
    <string name="textPBar">0 / 100</string>
    <string name="expense_one">Expense 1</string>
    <string name="expense_two">Expense 2</string>
    <string name="expense_three">Expense 3</string>
    <string name="expense_four">Expense 4</string>
    <string name="expense_five">Expense 5</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="createCat_button_text">Create</string>
    <string name="details">Details</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <string name="sampleNumber">$50.00</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="income">Income</string>
    <string name="title_activity_edit_income">Edit Income</string>
    <string name="dialog_delete_income">Are you sure you want to delete this
        income from the database? (This is permanent)</string>
    <string name="dialog_delete_yes">Yes</string>
    <string name="dialog_delete_no">No</string>
    <string name="save_button_text">Save</string>
    <string name="title_activity_license">LicenseActivity</string>

</resources>
