<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:text="@string/currentMax"
        android:textColor="@color/white"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:text="@string/position"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/pBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/position"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:indeterminate="false"
        android:max="100"
        android:padding="2dip" />

    <TextView
        android:id="@+id/textPBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignBottom="@id/pBar"
        android:layout_alignTop="@id/pBar"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:text="@string/textPBar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/topFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pBar"
        android:paddingTop="20dp"
        android:text="@string/top_five"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/numOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topFive"
        android:paddingTop="10dp"
        android:text="@string/expense_one"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingLeft="40dp" />

    <TextView
        android:id="@+id/numOneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topFive"
        android:paddingTop="10dp"
        android:text="@string/sampleNumber"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="40dp"
        android:paddingEnd="40dp" />

    <TextView
        android:id="@+id/numTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numOne"
        android:text="@string/expense_two"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingLeft="40dp" />

    <TextView
        android:id="@+id/numTwoNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numOne"
        android:text="@string/sampleNumber"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="40dp"
        android:paddingEnd="40dp" />

    <TextView
        android:id="@+id/numThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numTwo"
        android:text="@string/expense_three"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingLeft="40dp" />

    <TextView
        android:id="@+id/numThreeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numTwo"
        android:text="@string/sampleNumber"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="40dp"
        android:paddingEnd="40dp" />

    <TextView
        android:id="@+id/numFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numThree"
        android:text="@string/expense_four"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingLeft="40dp" />

    <TextView
        android:id="@+id/numFourNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numThree"
        android:text="@string/sampleNumber"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="40dp"
        android:paddingEnd="40dp" />

    <TextView
        android:id="@+id/numFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numFour"
        android:text="@string/expense_five"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingLeft="40dp" />

    <TextView
        android:id="@+id/numFiveNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numFour"
        android:text="@string/sampleNumber"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="40dp"
        android:paddingEnd="40dp" />

    <RelativeLayout
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/numFive"
        android:paddingLeft="70dp" />

    <Button
        android:id="@+id/details"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/details"
        style="@style/Buttons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>