<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/labelPassword"
        android:text="@string/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <EditText
        android:id="@+id/textPassword"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@color/white"
        android:layout_below="@id/labelPassword"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/buttonPassword"
        android:onClick="onLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text"
        android:layout_below="@id/textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        style="@style/Buttons"
        />
</RelativeLayout>