<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/welcomeText"
        android:text="@string/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true" />
    <ImageView
        android:id="@+id/icon_app"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/welcomeText"
        android:src="@drawable/splash_logo"/>
    <TextView
        android:id="@+id/labelPassword"
        android:text="@string/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/textWelcomePassword"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/textWelcomePassword"
        android:hint="Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_above="@+id/labelRetypePassword"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/labelRetypePassword"
        android:text="@string/label_retype_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/textRetypePassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/textRetypePassword"
        android:hint="Retype Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_above="@+id/buttonCheckPassword"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/buttonCheckPassword"
        android:onClick="onWelcomeEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        style="@style/Buttons"
        />
</RelativeLayout>