<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    >

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView android:text="@string/amount_text"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="60dp"
        android:paddingLeft="5dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:id="@+id/amountText"
        android:layout_below="@+id/app_bar"/>

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="Enter Cost"
        android:inputType="numberDecimal"
        android:background="@android:color/white"
        android:maxLength="8"
        android:layout_above="@+id/categoryText"
        android:layout_alignLeft="@+id/category_input"
        android:layout_alignStart="@+id/category_input"
        android:layout_marginBottom="25dp" />

    <TextView android:text="@string/category_text"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryText"
        android:paddingTop="30dp"
        android:paddingRight="100dp"
        android:paddingBottom="30dp"
        android:layout_below="@id/amountText" />

    <AutoCompleteTextView
        android:id="@+id/category_input"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingBottom="50dp"
        android:hint="Enter Category"
        android:completionThreshold="1"
        android:background="@android:color/white"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/vendorText"
        android:layout_toLeftOf="@+id/showDatePicker"
        android:layout_toStartOf="@+id/showDatePicker"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:dropDownSelector="#ffffab15"
        android:maxLength="20" />

    <TextView android:text="@string/vendor_text"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="100dp"
        android:paddingBottom="30dp"
        android:id="@+id/vendorText"
        android:layout_below="@id/categoryText"
        android:paddingTop="30dp" />

    <AutoCompleteTextView
        android:id="@+id/vendor_input"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:hint="Enter Vendor"
        android:inputType="textAutoCorrect"
        android:background="@android:color/white"
        android:padding="5dp"
        android:layout_above="@+id/dateText"
        android:layout_toLeftOf="@+id/showDatePicker"
        android:layout_toStartOf="@+id/showDatePicker"
        android:layout_marginBottom="26dp"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:layout_alignParentRight="false"
        android:dropDownSelector="#ffffab15"
        android:completionThreshold="1"
        android:maxLength="20" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text"
        android:id="@+id/cancel_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonClick"
        style="@style/Buttons" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onButtonClick"
        style="@style/Buttons" />

    <TextView
        android:text="@string/date_text"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="100dp"
        android:id="@+id/dateText"
        android:layout_below="@id/vendorText"
        android:paddingTop="30dp"
        android:paddingBottom="30dp" />

    <EditText
        android:id="@+id/date_input"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:enabled="false"
        android:hint="MM-DD-YYYY"
        android:background="@android:color/white"
        android:paddingTop="30dp"
        android:layout_alignBottom="@+id/dateText"
        android:layout_toLeftOf="@+id/showDatePicker"
        android:layout_toStartOf="@+id/showDatePicker"
        android:layout_marginBottom="25dp"
        android:maxLength="20" />

    <Button
        android:id="@+id/showDatePicker"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="onButtonClick"
        android:background="@drawable/calender"
        android:layout_alignRight="@+id/save_button"
        android:layout_alignEnd="@+id/cancel_button"
        android:layout_alignBottom="@+id/date_input" />

    <Button
        style="@style/Buttons"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="DELETE"
        android:id="@+id/deleteButton"
        android:onClick="onButtonClick"
        android:layout_below="@+id/dateText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
